# stenciltool

./: Cargo.toml  build.rs
src/: main.rs
templates/: header.jinja  source.jinja
